--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1 class="text-base font-semibold text-primary md:text-xl">
                     Halo semua 🖐, saya <span class="block font-bold  text-dark text-4xl lg:text-5xl">Monas Mardianto MK</span></h1>
                     <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Siswa <span class="text-dark">SMK Negri 1 Tanah Siang</span></h2>
-                    <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar web programming itu mudah dan menyenangkan buakn. <span class="text-dark font-bold">Bukan!</span></p>
+                    <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar web programming itu mudah dan menyenangkan bukan. <span class="text-dark font-bold">Bukan!</span></p>
 
                     <a href="#" class="text-base font-semibold text-white  bg-primary py-3 px-8 rounded-full hover:shadow-lg
                     hover:opacity-80 transition duration-300 ease-in-out/">Hubungi Saya</a>
@@ -86,7 +86,7 @@
                 <div class="wfull px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3
                     ">Tentang Saya</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk, belajar web programming WPU!</h2>
+                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk, belajar web programming di chanel Youtube WPU!</h2>
                     <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, accusamus consectetur facere commodi error numquam neque?</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
