--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="#home"  class="font-bold text-lg text-primary block py-6">monasmardianto</a>
+                    <a href="#home"  class="font-bold text-lg text-primary block py-6">Monas Mardianto MK</a>
                 </div>
                 <div class="flex  items-center px-4">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
@@ -153,7 +153,7 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/portfolio/4.png.jpg" alt="theme"  width="w-full" />
                     </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Them Web</h3>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Theme Web</h3>
                     <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur voluptatum illum facilis rem sunt quidem iusto ratione asperiores totam dolorum.</p>
                 </div>
             </div>
